update basic-info in description

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             Estudante de Desenvolvimento de Web na Trybe
         </p>
 
+        <!--Dados pessoais-->
         <ul>
+            <!--Email-->
             <li>
                 <strong>Email: </strong>
                 <a href="samuelicapuidados@gmail.com">
@@ -59,14 +61,16 @@
                 </a>
             </li>
 
+            <!--Telefone-->
             <li>
-                <strong>Telefone: </strong> 
+                <strong>Telefone: </strong>
                 <a href="tel:+55 88981722281">
                     (88) 9 8172-2281
 
                 </a>
             </li>
 
+            <!--Endereço-->
             <li>
                 <strong>Endereço: </strong>Rua Maria de Dey, 950, Centro - Icapuí-CE
             </li>
@@ -81,23 +85,21 @@
         </h3>
 
         <ul>
-            <li><i>Git e GitHube</i></li>
-            <li><em>HTML</em></li>
+            <li class="elementos-maiores">Git e GitHube</li>
+            <li>HTML</li>
         </ul>
 
         <h3 id="soft-skills">Soft Skills</h3>
         <ul>
-            <li>
-                <b>
-                    Liderança
-                </b>
+            <li class="elementos-maiores">
+                Liderança
             </li>
 
             <li>
                 Pensamento Crítico
             </li>
 
-            <li>
+            <li class="elementos-maiores">
                 Criatividade
             </li>
 
@@ -105,7 +107,7 @@
                 Inteligência Emocional
             </li>
 
-            <li>
+            <li class="elementos-maiores">
                 Comunicação
             </li>
 
