add font-family and format text

--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
 
         <nav>
             <ul>
-
+                <!--Descrição-->
                 <li>
                     <a href="#descricao">
                         Descrição
                     </a>
                 </li>
-
+                <!--Habilidades-->
                 <li>
-                    <a href="#hard-skills">
-                        Hard Skills
+                    <a href="#habilidades">
+                        Habilidades
                     </a>
-                </li>
-
-                <li>
-                    <a href="#soft-skills">
-                        Soft Skills
-                    </a>
+                    <ul>
+                        <!--Hard Skills-->
+                        <li>
+                            <a href="#hard-skills">
+                                Hard Skills
+                            </a>
+                        </li>
+                        <!--Soft Skills-->
+                        <li>
+                            <a href="#soft-skills">
+                                Soft Skills
+                            </a>
+                        </li>
+                    </ul>
                 </li>
 
             </ul>
@@ -76,7 +84,7 @@
             </li>
         </ul>
 
-        <h2>
+        <h2 id="habilidades">
             Habilidades
         </h2>
 
@@ -85,13 +93,14 @@
         </h3>
 
         <ul>
-            <li class="elementos-maiores">Git e GitHube</li>
-            <li>HTML</li>
+            <li class="">Git e GitHub</li>
+            <li>HTML 5</li>
+            <li>CSS 3</li>
         </ul>
 
         <h3 id="soft-skills">Soft Skills</h3>
         <ul>
-            <li class="elementos-maiores">
+            <li>
                 Liderança
             </li>
 
@@ -99,7 +108,7 @@
                 Pensamento Crítico
             </li>
 
-            <li class="elementos-maiores">
+            <li>
                 Criatividade
             </li>
 
@@ -107,7 +116,7 @@
                 Inteligência Emocional
             </li>
 
-            <li class="elementos-maiores">
+            <li>
                 Comunicação
             </li>
 
