updates style in header links

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 </head>
 
 <body>
-
     <header>
-
         <nav>
             <ul>
-                <!--Descrição-->
+                <!--Início-->
                 <li>
-                    <a href="#descricao">
-                        Descrição
+                    <a href="#inicio">
+                        Início
                     </a>
                 </li>
                 <!--Habilidades-->
@@ -44,7 +42,6 @@
 
             </ul>
         </nav>
-
     </header>
 
     <main>
@@ -55,34 +52,9 @@
 
         <img id="foto-samuel" src="./img/samuel-foto2.jpeg" alt="Foto Samuel" width="200px">
 
-        <p id="descricao">
+        <p id="inicio">
             Estudante de Desenvolvimento de Web na Trybe
         </p>
-
-        <!--Dados pessoais-->
-        <ul>
-            <!--Email-->
-            <li>
-                <strong>Email: </strong>
-                <a href="samuelicapuidados@gmail.com">
-                    samuelicapuidados@gmail.com
-                </a>
-            </li>
-
-            <!--Telefone-->
-            <li>
-                <strong>Telefone: </strong>
-                <a href="tel:+55 88981722281">
-                    (88) 9 8172-2281
-
-                </a>
-            </li>
-
-            <!--Endereço-->
-            <li>
-                <strong>Endereço: </strong>Rua Maria de Dey, 950, Centro - Icapuí-CE
-            </li>
-        </ul>
 
         <h2 id="habilidades">
             Habilidades
@@ -129,9 +101,6 @@
     </main>
 
     <footer>
-
-        <a href="#foto-samuel">Link interno para foto</a><br>
-        <a href="https://www.google.com" target="_blank">Link externo para Google</a>
 
     </footer>
 
