adiciona box-model ao header

--- a/index.html
+++ b/index.html
@@ -10,57 +10,62 @@
 </head>
 
 <body>
-    <header>
+    <header id="inicio">
+
+        <!--Menu-->
         <nav>
             <ul>
                 <!--Início-->
                 <li>
-                    <a href="#inicio">
-                        Início
-                    </a>
+                    <a href="#inicio">Início</a>
                 </li>
                 <!--Habilidades-->
                 <li>
-                    <a href="#habilidades">
-                        Habilidades
-                    </a>
-                    <ul>
-                        <!--Hard Skills-->
-                        <li>
-                            <a href="#hard-skills">
-                                Hard Skills
-                            </a>
-                        </li>
-                        <!--Soft Skills-->
-                        <li>
-                            <a href="#soft-skills">
-                                Soft Skills
-                            </a>
-                        </li>
-                    </ul>
+                    <a href="#habilidades">Habilidades</a>
+                </li>
+                <!--Contato-->
+                <li>
+                    <a href="#Contato"></a>
                 </li>
 
             </ul>
         </nav>
+
+        <div class="container">
+
+            <div class="lado-esquerdo">
+                <img src="./img/samuel-foto2.jpeg" alt="Foto Samuel" width="200px">
+
+            </div>
+
+            <div class="lado-direito">
+                <h1>
+                    Samuel Constantino de Oliveira Junior
+                </h1>
+
+                <div class="descricao">
+                    <p id="profissao">Estudante de Desenvolvimento de Web na Trybe</p>
+
+                    <p id="descricao-texto">Fascinado pelo mundo da tecnologia/programação. Estudante de Desenvolvimento Web na Trybe. Tenho interesses na área de desenvolvimento de sitemas web, embarcados e mobile. Meu objetivo é domitar todas etapas de desenvolvimento de um
+                        sistema robusto e seguro. Minha maior motivação sempre será a busca contínua pelo conhecimento.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+
     </header>
 
     <main>
-
-        <h1>
-            Samuel Constantino de Oliveira Junior
-        </h1>
-
-        <img id="foto-samuel" src="./img/samuel-foto2.jpeg" alt="Foto Samuel" width="200px">
-
-        <p id="inicio">
-            Estudante de Desenvolvimento de Web na Trybe
-        </p>
 
         <h2 id="habilidades">
             Habilidades
         </h2>
 
-        <h3 id="hard-skills">
+        <h3>
             Hard Skills
         </h3>
 
@@ -70,7 +75,7 @@
             <li>CSS 3</li>
         </ul>
 
-        <h3 id="soft-skills">Soft Skills</h3>
+        <h3>Soft Skills</h3>
         <ul>
             <li>
                 Liderança
