adiciona estilo ao header

--- a/index.html
+++ b/index.html
@@ -10,35 +10,13 @@
 </head>
 
 <body>
-    <header id="inicio">
-
-        <!--Menu-->
-        <nav>
-            <ul>
-                <!--Início-->
-                <li>
-                    <a href="#inicio">Início</a>
-                </li>
-                <!--Habilidades-->
-                <li>
-                    <a href="#habilidades">Habilidades</a>
-                </li>
-                <!--Contato-->
-                <li>
-                    <a href="#Contato"></a>
-                </li>
-
-            </ul>
-        </nav>
+    <header>
 
         <div class="container">
 
-            <div class="lado-esquerdo">
-                <img src="./img/samuel-foto2.jpeg" alt="Foto Samuel" width="200px">
+            <img class="coluna-esquerda" src="./img/samuel-foto2.jpeg" alt="Foto Samuel" width="200px">
 
-            </div>
-
-            <div class="lado-direito">
+            <div class="coluna-direita">
                 <h1>
                     Samuel Constantino de Oliveira Junior
                 </h1>
@@ -53,9 +31,6 @@
             </div>
 
         </div>
-
-
-
 
     </header>
 
