--- a/index.html
+++ b/index.html
@@ -36,47 +36,40 @@
 
     <main>
 
-        <h2 id="habilidades">
-            Habilidades
-        </h2>
+        <div class="container">
 
-        <h3>
-            Hard Skills
-        </h3>
+            <div class="coluna-esquerda">
 
-        <ul>
-            <li class="">Git e GitHub</li>
-            <li>HTML 5</li>
-            <li>CSS 3</li>
-        </ul>
+                <h2>Hard Skills</h2>
+                <ul>
+                    <li class="">Git e GitHub</li>
+                    <li>HTML 5</li>
+                    <li>CSS 3</li>
+                </ul>
 
-        <h3>Soft Skills</h3>
-        <ul>
-            <li>
-                Liderança
-            </li>
+            </div>
 
-            <li>
-                Pensamento Crítico
-            </li>
+            <div class="coluna-direita">
 
-            <li>
-                Criatividade
-            </li>
+                <h2>Soft Skills</h2>
+                <ul>
+                    <li>Liderança</li>
 
-            <li>
-                Inteligência Emocional
-            </li>
+                    <li>Pensamento Crítico</li>
 
-            <li>
-                Comunicação
-            </li>
+                    <li>Criatividade</li>
 
-            <li>
-                Colaboração
-            </li>
+                    <li>Inteligência Emocional</li>
 
-        </ul>
+                    <li>Comunicação</li>
+
+                    <li>Colaboração</li>
+
+                </ul>
+
+            </div>
+
+        </div>
 
     </main>
 
