--- a/index.html
+++ b/index.html
@@ -75,6 +75,51 @@
 
     <footer>
 
+        <div class="container">
+
+            <div class="coluna-esquerda">
+                <h2>Endereço</h2>
+                <ul class="endereco">
+
+                    <li>
+                        <strong>Email: </strong>
+                        <a href="mailto:samuelicapuidados@gmail.com">samuelicapuidados@gmail.com</a>
+                    </li>
+
+                    <li>
+                        <strong>Telefone: </strong>
+                        <a href="tel:+55 (88) 9 8172-2281">(88) 9 8172-2281</a>
+                    </li>
+
+                    <li>
+                        <strong>Endereço: </strong>
+                        <a href="https://www.google.com.br/maps/place/BonaVita/@-4.7140331,-37.3557112,20.18z/data=!4m5!3m4!1s0x7b9d9438c532d5f:0x499f9577d1717ffd!8m2!3d-4.7140615!4d-37.3556627" target="_blank">Rua Maria de Dey, 950, Centro - Icapuí-CE</a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="coluna-direita">
+                <h2>Redes Sociais</h2>
+
+                <div class="redes-sociais">
+
+                    <a href="https://www.linkedin.com/in/samuel-constantino" target="_blank">
+                        <img src="./img/linkedin.png" alt="Foto-Linkedin" width="50px">
+                        <p>Linkedin</p>
+                    </a>
+
+                    <a href="https://github.com/samuel-constantino" target="_blank">
+                        <img src="./img/github-big-logo.png" alt="Foto-GitHub" width="50px">
+                        <p>Github</p>
+                    </a>
+
+                </div>
+
+            </div>
+
+        </div>
+
     </footer>
 
 </body>
