--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./portfolio-docs/css/style.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 
         <div class="container">
 
-            <img class="coluna-esquerda" src="./img/samuel-foto2.jpeg" alt="Foto Samuel" width="200px">
+            <img class="coluna-esquerda" src="./portfolio-docs/img/samuel-foto2.jpeg" alt="Foto Samuel" width="200px">
 
             <div class="coluna-direita">
                 <h1>
@@ -105,12 +105,12 @@
                 <div class="redes-sociais">
 
                     <a href="https://www.linkedin.com/in/samuel-constantino" target="_blank">
-                        <img src="./img/linkedin.png" alt="Foto-Linkedin" width="50px">
+                        <img src="./portfolio-docs/img/linkedin.png" alt="Foto-Linkedin" width="50px">
                         <p>Linkedin</p>
                     </a>
 
                     <a href="https://github.com/samuel-constantino" target="_blank">
-                        <img src="./img/github-big-logo.png" alt="Foto-GitHub" width="50px">
+                        <img src="./portfolio-docs/img/github-big-logo.png" alt="Foto-GitHub" width="50px">
                         <p>Github</p>
                     </a>
 
